--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,22 @@
 body
 {
-    color: aqua;
-    text-align: center;
+    color: rgb(0, 0, 0);
+    text-align: left;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+#container
+{
+    width: 70%;
+    padding: 2em;
+    text-align: center;
+    border: 1px solid #000000;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
