--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,6 @@
 body
 {
-<<<<<<< HEAD
-    color: rgb(30, 214, 144);
-=======
-    color: rgb(248, 10, 10);
->>>>>>> cabecera
+    color: rgb(0, 0, 0);
     text-align: left;
     font-family: "Arial";
     font-size: 16px;
@@ -51,6 +47,6 @@ body
 #post
 {
     padding: 1em;
-    text-align: right;
+    text-align: center;
     font-family: 'Times New Roman';
 }
